# OpenGL_Cat

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  build_dll.bat  build_static.bat  main.cpp
glad_4.6/include/glad/: glad.h
glad_4.6/src/: glad.c
